# cats

./: AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
docs/: gnu_coreutils_equivalents.md
src/: core.rs  execution.rs  lib.rs  main.rs
src/editing/: management_tools.rs  mod.rs  specialized_tools.rs
src/file_navigation/: mod.rs
src/linting/: mod.rs
src/llm/: assistant.rs  converter.rs  executor.rs  mod.rs  result_handler.rs
src/search/: filtering.rs  mod.rs
src/state/: mod.rs
src/utils/: count_tokens.rs  mod.rs
